# estimators

./: .gitignore  notes.md
code/: CMakeLists.txt
code/output/max/poisson/: (16).json  (4).json  (8).json
code/output/max/uniform_int/: (0,0).json  (0,15).json  (0,3).json  (0,4).json  (0,7).json
code/output/median/poisson/: (16).json  (4).json  (8).json
code/output/median/uniform_int/: (0,15).json  (0,3).json  (0,7).json
code/output/sum/uniform_int/: (0,0).json
code/output/sum/uniform_real/: (0,0).json
code/output/var/uniform_int/: (0,15).json  (0,3).json  (0,7).json
code/output/var_mu/uniform_int/: (0,15).json  (0,3).json  (0,7).json
code/output/var_nd/poisson/: (16).json  (4).json  (8).json
code/output/var_nd/uniform_int/: (0,15).json  (0,3).json  (0,7).json
code/output/var_nd_mu/uniform_int/: (0,15).json  (0,3).json  (0,7).json
code/output_k1/: p_strs.json
code/output_k1/all_fns/lognormal/: (1.6702,0.3815).json
code/output_k1/all_fns/normal/: (0.0,1.0).json  (0.0,1.4142135623730951).json  (0.0,2.0).json  (0.0,2.8284271247461903).json  (0.0,4.0).json
code/output_k1/all_fns/poisson/: (1).json  (2).json  (4).json  (8).json
code/plot/: plot_est.py  plot_est_python.py  plot_ksg_est.py  plot_mu_var.py
code/py_src/: brute_force.py  demo.py  dist_params.py  estimator_exp.py  main.py  mixed.py  mixed_ksg.py  pdfs.py  test_ln.py  test_poisson_ent.py  var.py
code/src/: data_io.hpp  estimator.hpp  experiment.cpp  experiment.hpp  functions.hpp  knn_est.hpp  main.cpp  pdfs.hpp  plug-in_est.hpp  pmfs.hpp  rand_gen.hpp  rng_testing.cpp  rng_testing.hpp  testing.cpp  testing.hpp  utilities.hpp
code/src/headers/: pcg_random.hpp
(+212 files in other folders)
